[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scenes/Menu/option_menu.gd" type="Script" id=1]

[node name="Control" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="ColorFrame2" type="ColorFrame" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 858.0
margin/top = 70.0
margin/right = 1262.0
margin/bottom = 658.0
color = Color( 0.371094, 0.352249, 0.352249, 1 )

[node name="ColorFrame3" type="ColorFrame" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 435.0
margin/top = 70.0
margin/right = 839.0
margin/bottom = 658.0
color = Color( 0.232361, 0.233674, 0.316406, 1 )

[node name="ColorFrame4" type="ColorFrame" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 70.0
margin/right = 414.0
margin/bottom = 658.0
color = Color( 0.201508, 0.242188, 0.209771, 1 )

[node name="OptionsLabel" type="Label" parent="Control"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 11.0
margin/right = 93.0
margin/bottom = 42.0
text = "Options
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 139.0
margin/top = 682.0
margin/right = 1258.0
margin/bottom = 696.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GraphicOptions" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 11.0
margin/top = 53.0
margin/right = 99.0
margin/bottom = 67.0
text = "Video options"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SoundOptions" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 435.0
margin/top = 51.0
margin/right = 526.0
margin/bottom = 65.0
text = "Sound options"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DataOptions" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 857.0
margin/top = 51.0
margin/right = 938.0
margin/bottom = 65.0
text = "Data options"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackBtn" type="Button" parent="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 673.0
margin/right = 127.0
margin/bottom = 705.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="BackBtnLabel" type="Label" parent="Control/BackBtn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 6.0
margin/right = 106.0
margin/bottom = 27.0
text = "Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 82.0
margin/right = 131.0
margin/bottom = 115.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Control/Button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 0.0
margin/right = 113.0
margin/bottom = 34.0
text = "Toggle fullscreen"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Button2" type="Button" parent="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 127.0
margin/right = 131.0
margin/bottom = 164.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Control/Button2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = -1.0
margin/right = 113.0
margin/bottom = 36.0
text = "Toggle vsync"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="clearDataBtn" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 869.0
margin/top = 81.0
margin/right = 976.0
margin/bottom = 116.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "REMOVE ALL DATA"
flat = false

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 460.0
margin/top = 274.0
margin/right = 824.0
margin/bottom = 433.0
popup/exclusive = false
window/title = "Deleting data..."
dialog/text = "WARNING!
YOU ARE ABOUT TO DELETE ALL THE GAME SAVEDATA.
THIS PROCESS IS IRREVERSIBLE. 

DO YOU WANT TO CONTINUE?"
dialog/hide_on_ok = true

[connection signal="pressed" from="Control/BackBtn" to="." method="_on_BackBtn_pressed"]

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Control/Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="Control/clearDataBtn" to="." method="_on_clearDataBtn_pressed"]


